cloudsim: record deployment details on check-in
When a node checks in, record what deployment it has installed, is currently installing, and has failed to install.
